# cpp-game-server-example

./: .gitignore  CMakeLists.txt  main.cpp  proto_code.sh  readme.md
framework/: make-all.sh
framework/res/: engine.yaml  engine2.yaml
framework/res/log4/: log4_dbmgr.properties  log4_login.properties
framework/src/apps/allinone/: CMakeLists.txt  main.cpp
framework/src/apps/appmgr/: CMakeLists.txt  app_sync_component.cpp  create_world_component.cpp  create_world_component.h  main.cpp
framework/src/apps/dbmgr/: CMakeLists.txt  mysql_base.cpp  mysql_connector.cpp  mysql_connector.h  mysql_table_update.cpp  mysql_table_update.h
framework/src/apps/game/: CMakeLists.txt  game.h  lobby.cpp  lobby.h  main.cpp  player_component_onlinegame.cpp  space_sync_handler.h  teleport_object.h  world_component_teleport.cpp  world_proxy.cpp  world_proxy.h  world_proxy_locator.h
framework/src/apps/login/: CMakeLists.txt  account.cpp  main.cpp  player_component_onlineinlogin.cpp  redis_login.cpp
framework/src/apps/space/: CMakeLists.txt  collider_component.cpp  collider_component.h  collision_detect_system.cpp  collision_detect_system.h  main.cpp  move_component.cpp  move_component.h  move_system.cpp  move_system.h  player_manager_component.cpp  space.h  world.cpp  world.h  world_gather.cpp  world_operator_component.cpp
framework/src/libs/libmath3d/: CMakeLists.txt  aabb3.cpp  aabb3.h  math_util.cpp  matrix4x3.cpp  matrix4x3.h  plane.cpp  plane.h  readme.md  rotation_matrix.cpp  vector3.cpp  vector3.h  vector_num_type.cpp  vector_num_type.h
framework/src/libs/libmath3d/protobuf/: db.pb.cc  db.pb.h  db.proto
framework/src/libs/libplayer/: player.cpp  player_component_last_map.cpp  player_component_last_map.h  player_component_proto_list.h
framework/src/libs/libresource/: CMakeLists.txt  resource_base.cpp  resource_base.h  resource_world.cpp  resource_world.h
framework/src/libs/libserver/: CMakeLists.txt  app_type.h  base_buffer.cpp  base_buffer.h  cache_refresh.h  check_time_component.h  common.h  component.cpp  component.h  component_collections.cpp  component_collections.h  component_factory.h  component_help.cpp  (+59 more)
framework/src/protobuf/: db.pb.cc  db.pb.h  db.proto
include/: conn.h  conn_writer.h  msg.h  service.h  socket_worker.h  sunnet.h  worker.h
lockstep/: main.cpp
lockstep/include/: ikcp.h  lockstep.h
math/: main.cpp
math/include/: aabb3.h  euler_angles.h  math_util.h  quaternion.h  rotation_matrix.h  triangle.h  vector3.h  vector_num_type.h
math/src/: aabb3.cpp  euler_angles.cpp  plane.cpp  quaternion.cpp  triangle.cpp  vector3.cpp  vector_num_type.cpp
math_3d/: main.cpp
net_base/: main.cpp
net_base/include/: service.h  socket_worker.h  sunnet.h  worker.h
net_base/src/: service.cpp  socket_worker.cpp  sunnet.cpp  worker.cpp
proto/: frame_input.proto  message_id.proto
proto_codes/proto/: frame_input.pb.cc  frame_input.pb.h  message_id.pb.cc  message_id.pb.h
service/main/: init.lua
src/: conn_writer.cpp  main.cpp  service.cpp  socket_worker.cpp  sunnet.cpp  worker.cpp
(+8 files in other folders)
